amf-cli/shared/src/test/resources/parser-results/raml/error/no-base-uri.raml
#%RAML 1.0
title: some title

baseUriParameters:
  some: string